Windows: turn textures to upside down, to handle wrong UV system

--- a/SpiderChase/SpiderChase.vcxproj.filters
+++ b/SpiderChase/SpiderChase.vcxproj.filters
@@ -124,6 +124,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="Scenes\Start\start.paklist" />
+    <CustomBuild Include="Scenes\Start\start.paklist">
+      <Filter>Scenes\Start</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
